--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>this is my res web</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul class="nav-list">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New</h1>
+                <h1 class="banner-title">Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+
+            </div>
+            <img src="images/banner.png" alt="">
+            
+        </div>
+    </header>
 </body>
 </html>
